# namanga_web_app

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
auth/: login.py  register.py
call_api/: chapter.py  manga.py
call_api/auth/: login.py  register.py
execute/: __init__.py  manga.py
pages/: __init__.py  home.py  load_main.py  login.py
pages/form/: __init__.py  chapter.py  manga.py
settings/: config.py  connect.py
sql/: manga.py
