[tool.poetry]
name = "MangaNa"
version = "0.1.0"
description = ""
authors = ["Tran Viet <vietgym007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.34.0"
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.30"
 passlib = "1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
